Resolves: tdf#100201 crash on apply custom color

regression from...

commit 789055bc2acb4c71483fd60ea258d158bd5aec10
Date:   Tue Apr 12 16:39:03 2016 +0200

    clang-tidy performance-unnecessary-copy-initialization

    probably not much performance benefit, but it sure is good at
    identifying leftover intermediate variables from previous
    refactorings.

This case has a comment explaining the problem that appeared post
change.

Change-Id: Ib0c0883c57f103656cda00e3a94399a515d7fe41